[package]
name = "waker-queue"
version = "0.1.0"
description = "A queue with a waker attached. Low level plumbing."
keywords = ["atomic", "waker", "concurrent", "queue"]
categories = ["asynchronous", "concurrency", "data-structures"]
homepage = "https://github.com/irrustible/waker-queue"
repository = "https://github.com/irrustible/waker-queue"
documentation = "https://docs.rs/waker-queue"
authors = ["James Laver <james.laver@gmail.com>"]
license = "MPL-2.0"
edition = "2018"
readme = "README.md"

[dependencies]
concurrent-queue = "1"
atomic-waker = "1"
pin-project-lite = "0.1"
